# w3g-info

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTES.md  README.md  TODO.md  create_container.sh  docker-compose.yml
server/: deploy.sh  docker-compose.yml  script.md
w3g-common/: Cargo.toml
w3g-common/resources/: 11151616.w3g  11379705.w3g
w3g-common/src/: lib.rs
w3g-common/src/api/: mod.rs
w3g-common/src/api/island_defense/: leaderboard.rs  lobby.rs  mod.rs
w3g-common/src/parser/: mod.rs  parser.rs
w3g-common/src/pubsub/: consumer.rs  mod.rs  model.rs  producer.rs
w3g-common/src/rating/: mod.rs
w3g-common/tests/: parser_test.rs
w3g-downloader-ms/: Cargo.toml
w3g-downloader-ms/resources/: game_page  games_page
w3g-downloader-ms/src/: main.rs
w3g-lobby-ms/: Cargo.toml
w3g-lobby-ms/resources/: games_fast  slot_fast_invalid  slot_fast_valid
w3g-lobby-ms/src/: lib.rs  main.rs
w3g-lobby-ms/src/engine/: ent.rs  lobby.rs  mod.rs
w3g-parser-ms/: Cargo.toml
w3g-rating-ms/: Cargo.toml
w3g-rating-ms/resources/: 11151801.w3g  11151811.w3g
w3g-rating-ms/src/: main.rs
w3g-rating-ms/tests/: test.rs
w3g-router-ms/: Cargo.toml
w3g-router-ms/src/: main.rs
w3g-stats-ms/: Cargo.toml
w3g-stats-ms/src/: main.rs
w3g-ui/: Dockerfile  README.md  package-lock.json  package.json
w3g-ui/public/: index.html
w3g-ui/src/: App.vue  main.js
w3g-ui/src/components/id-leader-board/: builder-panel.vue  id-leader-board.vue  titan-panel.vue
w3g-ui/src/components/id-lobby/: builder-panel.vue  id-lobby.vue  titan-panel.vue
w3g-ui/src/components/static/: about.vue  privacy.vue
w3g-ui/src/plugins/: id-api.js  vue-logger.js  vuetify.js
