[package]
name = "w3g-common"
version = "0.1.0"
authors = ["Jeffrey.Carter <JeffreyKCarter@gmail.com>"]
publish = false

[lib]

[dependencies]
# De/Serialization library
serde = "1.0.75"        # MIT/Apache-2.0
serde_derive = "1.0.75" # MIT/Apache-2.0
# De/Searlization impls
serde_json = "1.0.26"   # MIT/Apache-2.0
rmp = "0.8.7"
rmp-serde = "0.13.7"
bincode = "1.0.1"

# Pub/Sub
kafka = "0.7.0"         # MIT

# Easy Error handling
error-chain = "0.12.0"  # MIT/Apache-2.0

# Easy decoding bytes to u* & i*
byteorder = "1.2.4"     # Unlicense/MIT
# De/Compression
libflate = "0.1.16"     # MIT

# Mongo 
bson = "0.12.2"
mongodb = "0.3.10"

# "joda-time" of rust
chrono = { version = "0.4.6", features = ["serde"] } # MIT/Apache-2.0

# "ELO" library
bbt = { version = "0.2.0", features = ["serde"] }  # MIT


# Logging   
log = "0.4.5"           # MIT/Apache-2.0
env_logger = "0.5.13"   # MIT/Apache-2.0

# Download + Parsing HTML
reqwest = "0.8.8"       # MIT/Apache-2.0
select = "0.4.2"        # MIT
 