[package]
name = "w3g-downloader-ms"
version = "0.1.0"
authors = ["Jeffrey.Carter <JeffreyKCarter@gmail.com>"]
publish = false

[dependencies]
w3g-common = { path = "../w3g-common" }

# Download + Parsing HTML
reqwest = "0.8.8"       # MIT/Apache-2.0
select = "0.4.2"        # MIT

rocket = "0.3.16"           # MIT/Apache-2.0
rocket_codegen = "0.3.16"   # MIT/Apache-2.0
rocket_contrib = "0.3.16"   # MIT/Apache-2.0

# Mongo 
bson = "0.12.2"
mongodb = "0.3.10"

regex = "1.0.5"         # MIT/Apache-2.0
lazy_static = "1.1.0"   # MIT/Apache-2.0

serde = "1.0.75"        # MIT/Apache-2.0
serde_derive = "1.0.75" # MIT/Apache-2.0
serde_json = "1.0.26"   # MIT/Apache-2.0

error-chain = "0.12.0"  # MIT/Apache-2.0

# Logging   
log = "0.4.5"           # MIT/Apache-2.0
env_logger = "0.5.13"   # MIT/Apache-2.0