[package]
name = "w3g-lobby-ms"
version = "0.1.0"
authors = ["Jeffrey.Carter <JeffreyKCarter@gmail.com>"]
publish = false

[dependencies]
w3g-common = { path = "../w3g-common" }

byteorder = "1.2.4"

# Logging   
log = "0.4.5"           # MIT/Apache-2.0
env_logger = "0.5.13"   # MIT/Apache-2.0

# Download + Parsing HTML
reqwest = "0.8.8"       # MIT/Apache-2.0 
select = "0.4.2"        # MIT

# Easy Error handling
error-chain = "0.12.0"  # MIT/Apache-2.0

# "joda-time" of rust
chrono = { version = "0.4.6", features = ["serde"] } # MIT/Apache-2.0
